[gd_scene load_steps=19 format=2]

[ext_resource path="res://Mundos/World.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemigo/Enemigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Musicas/487685__gr8horizon__dragon-power-training-loop.wav" type="AudioStream" id=4]
[ext_resource path="res://Mundos/Pause.gd" type="Script" id=5]
[ext_resource path="res://Mundos/Sprites/pause.png" type="Texture" id=6]
[ext_resource path="res://Sprites/veneno1.png" type="Texture" id=7]
[ext_resource path="res://Mundos/Button2.gd" type="Script" id=8]
[ext_resource path="res://Sprites/coala1.png" type="Texture" id=9]
[ext_resource path="res://Mundos/Button.gd" type="Script" id=10]
[ext_resource path="res://Mundos/Sprites/music_on.png" type="Texture" id=11]
[ext_resource path="res://Mundos/Sprites/music_off.png" type="Texture" id=12]
[ext_resource path="res://Sprites/New Piskel.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 511.837, 35.6994 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 300.52 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 510.636, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 302.853 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 512.969, 10 )

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 722, 464 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 299 )
current = true

[node name="Enemigo" parent="." instance=ExtResource( 3 )]
position = Vector2( 554, 146.058 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 2.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="BackOverlay" type="ColorRect" parent="CanvasLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.337255 )

[node name="Pause2" type="Button" parent="CanvasLayer"]
pause_mode = 2
margin_left = 925.0
margin_top = 2.0
margin_right = 977.0
margin_bottom = 48.0
toggle_mode = true
icon = ExtResource( 6 )
flat = true

[node name="botões" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
__meta__ = {
"_edit_lock_": true
}

[node name="Button2" type="Button" parent="botões"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 143.0
margin_top = 513.0
margin_right = 187.0
margin_bottom = 548.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 7 )
flat = true
script = ExtResource( 8 )

[node name="Button" type="Button" parent="botões"]
margin_left = 80.0
margin_top = 521.0
margin_right = 114.0
margin_bottom = 549.0
rect_scale = Vector2( 2, 2 )
icon = ExtResource( 9 )
flat = true
script = ExtResource( 10 )

[node name="TextureButton" type="TextureButton" parent="botões"]
margin_left = 976.0
margin_top = 5.0
margin_right = 1016.0
margin_bottom = 45.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 8, 8 )
z_index = -1
texture = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="colisores" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisores"]
position = Vector2( 512, 291.413 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="colisores"]
position = Vector2( -10.5254, 300 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="colisores"]
position = Vector2( 513.166, -10.4968 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D4" type="CollisionShape2D" parent="colisores"]
position = Vector2( 1034.55, 300 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D5" type="CollisionShape2D" parent="colisores"]
position = Vector2( 512, 610.002 )
shape = SubResource( 5 )
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="toggled" from="CanvasLayer/Pause2" to="." method="_on_Pause_toggled"]
[connection signal="pressed" from="botões/Button2" to="botões/Button2" method="_on_Button2_pressed"]
[connection signal="pressed" from="botões/Button" to="botões/Button" method="_on_Button_pressed"]
[connection signal="toggled" from="botões/TextureButton" to="." method="_on_TextureButton_toggled"]
